--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -17,3 +17,7 @@ updateUser:
 deleteUser:
   path: /user/delete/{id}
   controller: App\Controller\UserController::deleteUser
+
+report_pdf_user:
+  path: /user/report-pdf
+  controller: App\Controller\UserController::getPDF
